# syn

./: .editorconfig  .gitignore  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: ci.yml
grammar/: c.toml  completeness.grm  completeness.toml  dragon.toml  epsilon.toml  first.grm  first.toml  ll.toml  lllr.toml  lr.toml  prev.toml  realizable.toml  recursion.toml  unique.toml  unreachable.grm  unreachable.toml
input/: lllr.txt  main.c  sieve.prev
src/: automaton.rs  grammar.rs  lexer.rs  lr.rs  main.rs  parser.rs  production.rs  rule.rs  symbol.rs  util.rs
src/automaton/: action.rs  data.rs  item.rs  state.rs  transition.rs
src/grammar/: error.rs  matcher.rs  reader.rs  rule.rs  symbol.rs
src/lexer/: span.rs  token.rs
src/lr/: action.rs  automaton.rs  item.rs  mod.rs  state.rs
src/parser/: span.rs  token.rs
