[package]
name = "syn"
version = "0.6.0"
authors = ["Klemen Košir <klemen.kosir@kream.io>"]
license = "MIT"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", default-features = false, features = ["std", "cargo", "error-context", "help", "usage"] }
indexmap = "2.8.0"
regex = "1.11.1"
toml = { version = "0.8.20", features = ["preserve_order"] }
